--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">AlBang</string>
+    <string name="app_name">알방</string>
+
+    <!-- button -->
+    <string name="btn_confirm">확인</string>
+    <string name="btn_cancel">취소</string>
+    <string name="btn_request">랜드마크 신청하기</string>
+
+    <!-- dialog -->
+
+
 </resources>
