#22 [feature] : location, camera permission request at launch
tedpermisson 라이브러리 사용 권한 체크
manifest에 명시적 권한 부여
필요한 string resource 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,14 @@
     <string name="btn_request">랜드마크 신청하기</string>
 
     <!-- dialog -->
+    <string name="permission_denied_dialog_message">"앱 사용 필수 권한이 거부되어 앱이 종료됩니다."</string>
+    <string name="permission_denide_dialog_button">앱 종료</string>
 
+    <!-- permission -->
+    <string name="permission_rational_title">권한 허용</string>
+    <string name="permission_rational_message">앱 사용을 위해 카메라와 위치 권한이 필요합니다.</string>
+    <string name="permission_rational_button">권한 부여</string>
+    <string name="permission_denied_title">권한 거부</string>
+    <string name="permission_denied_message">카메라, 위치 권한이 거부되어 앱이 종료됩니다.\n[설정] -> [권한]에서 허용 가능합니다.</string>
 
 </resources>
