--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <!-- content description -->
     <string name="des_ibtn_report">신고</string>
     <string name="des_ibtn_delete">삭제</string>
+    <string name="des_iv_heritage">%s 이미지입니다.</string>
+    <string name="des_btn_back">뒤로 가기</string>
 
 </resources>
