--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,10 @@
     <string name="des_ibtn_delete">삭제</string>
     <string name="des_iv_heritage">%s 이미지입니다.</string>
     <string name="des_btn_back">뒤로 가기</string>
+    <string name="des_fab_review">ar 또는 리스트 화면으로 전환, 방명록 작성, 새로고침 기능을 이용하고 싶으시면 눌러주세요.</string>
+    <string name="des_fab_refresh">방명록 새로고침</string>
+    <string name="des_fab_ar">ar 화면으로 전환</string>
+    <string name="des_fab_list">리스트 화면으로 전환</string>
+    <string name="des_fab_add">방명록 작성하기</string>
 
 </resources>
