--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="btn_confirm">확인</string>
     <string name="btn_cancel">취소</string>
     <string name="btn_request">랜드마크 신청하기</string>
+    <string name="btn_check_duplicated">중복 확인</string>
 
     <!-- dialog -->
     <string name="permission_denied_dialog_message">"앱 사용 필수 권한이 거부되어 앱이 종료됩니다."</string>
@@ -12,6 +13,9 @@
     <string name="register_nickname_dialog_title">닉네임 등록</string>
     <string name="update_nickname_dialog_title">닉네임 수정</string>
     <string name="nickname_dialog_default_message">취소를 선택하면 이름으로 설정됩니다.</string>
+    <string name="nickname_duplicated">이미 사용 중인 닉네임입니다.</string>
+    <string name="nickname_available">사용 가능한 닉네임입니다.</string>
+    <string name="validate_nickname_fail">닉네임 중복확인 실패</string>
 
     <!-- permission -->
     <string name="permission_rational_title">권한 허용</string>
@@ -22,5 +26,9 @@
 
     <!-- hint -->
     <string name="hint_nickname">닉네임을 입력해주세요.</string>
+
+    <!-- login -->
+    <string name="login_fail_dialog_title">로그인 실패</string>
+    <string name="login_fail_dialog_message">로그인에 실패하였습니다.\n다시 시도해주세요.</string>
 
 </resources>
