--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="btn_confirm">확인</string>
     <string name="btn_cancel">취소</string>
     <string name="btn_request">랜드마크 신청하기</string>
+    <string name="btn_show_guestbook">방명록 보러가기</string>
     <string name="btn_check_duplicated">중복 확인</string>
 
     <!-- dialog -->
@@ -13,8 +14,6 @@
     <string name="dialog_message_review">방명록 내용 : %s</string>
     <string name="dialog_title_finish_notify">신고가 완료되었습니다.</string>
     <string name="dialog_title_finish_delete">삭제가 완료되었습니다.</string>
-    <string name="permission_denied_dialog_message">"앱 사용 필수 권한이 거부되어 앱이 종료됩니다."</string>
-    <string name="permission_denied_dialog_button">앱 종료</string>
     <string name="register_nickname_dialog_title">닉네임 등록</string>
     <string name="update_nickname_dialog_title">닉네임 수정</string>
     <string name="nickname_dialog_default_message">취소를 선택하면 이름으로 설정됩니다.</string>
@@ -40,7 +39,7 @@
     <string name="permission_denied_title">권한 거부</string>
     <string name="permission_denied_message">카메라, 위치 권한이 거부되어 앱이 종료됩니다.\n[설정] -> [권한]에서 허용 가능합니다.</string>
     <string name="permission_denied_dialog_message">"앱 사용 필수 권한이 거부되어 앱이 종료됩니다."</string>
-    <string name="permission_denide_dialog_button">앱 종료</string>
+    <string name="permission_denied_dialog_button">앱 종료</string>
 
     <!-- hint -->
     <string name="hint_nickname">닉네임을 입력해주세요.</string>
