#47 [ui/ux] : 마이페이지 view xml 작성
마이페이지 view xml 작성
필요 리소스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,14 @@
     <string name="nickname_dialog_default_message">취소를 선택하면 이름으로 설정됩니다.</string>
     <string name="nickname_duplicated">이미 사용 중인 닉네임입니다.</string>
     <string name="nickname_available">사용 가능한 닉네임입니다.</string>
+    <string name="validate_nickname_title">닉네임 중복확인</string>
     <string name="validate_nickname_fail">닉네임 중복확인 실패</string>
+    <string name="logout_confirm_message">로그아웃 하시겠습니까?</string>
+    <string name="withdraw_confirm_message">회원탈퇴 하시겠습니까?\n작성하신 방명록과 모든 데이터가 삭제됩니다.</string>
+    <string name="logout_fail_title">로그아웃 실패</string>
+    <string name="logout_fail_message">로그아웃에 실패했습니다.\n다시 시도해주세요.</string>
+    <string name="withdraw_fail_title">회원탈퇴 실패</string>
+    <string name="withdraw_fail_message">회원탈퇴에 실패했습니다.\n다시 시도해주세요.</string>
 
     <!-- content description -->
     <string name="des_ibtn_report">신고</string>
@@ -47,5 +54,14 @@
     <!-- login -->
     <string name="login_fail_dialog_title">로그인 실패</string>
     <string name="login_fail_dialog_message">로그인에 실패하였습니다.\n다시 시도해주세요.</string>
+
+    <!-- mypage -->
+    <string name="mypage_title">마이페이지</string>
+    <string name="mypage_nickname_update">닉네임 변경하기</string>
+    <string name="mypage_show_my_guestbook">내가 쓴 방명록 보기</string>
+    <string name="notice">공지사항</string>
+    <string name="open_source_license">오픈소스 라이선스</string>
+    <string name="logout">로그아웃</string>
+    <string name="withdraw">회원탈퇴</string>
 
 </resources>
