--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,11 @@
     <string name="logout">로그아웃</string>
     <string name="withdraw">회원탈퇴</string>
 
+    <!-- my guestbook -->
+    <string name="my_guestbook_title">내가 쓴 방명록</string>
+    <string name="delete_guestbook">방명록 삭제</string>
+    <string name="delete_my_guestbook_landmark_name">%s에 작성된 방명록</string>
+    <string name="delete_my_guestbook_content">&quot;%s&quot;</string>
+    <string name="delete_my_guestbook_message">이(가) 삭제됩니다.</string>
+
 </resources>
